--- a/backend/WebAppCafeteria/Cafeteria/Views/products/Index.cshtml
+++ b/backend/WebAppCafeteria/Cafeteria/Views/products/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Cafeteria.Models.Product>
+@model ProductCategoryViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -12,6 +12,9 @@
 
 <form asp-controller="Products" asp-action="Index" method="get">
     <p>
+        <select asp-for="ProductCategory" asp-items="Model.Categories">
+          <option value="">All</option>
+        </select>
         <label>Name: <input type="text" name="searchString" /></label>
         <input type="submit" value="Filter" />
     </p>
@@ -21,22 +24,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Products![0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Quantity)
+                @Html.DisplayNameFor(model => model.Products![0].Quantity)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
+                @Html.DisplayNameFor(model => model.Products![0].Category)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.Products![0].Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Products!) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
